--- a/Ranya01/AssignmentG5.css
+++ b/Ranya01/AssignmentG5.css
@@ -1,5 +1,8 @@
 /* testiing contact button met juiste positie */
 
+#bla {
+    float: right;
+}
 
 .box1 {
   width: 33%;
@@ -35,10 +38,7 @@
     color: red;
     padding: 16px;
     font-size: 16px;
-    border: none;
-    
-    
-    
+    border: none;    
 }
 
 /* The container <div> - needed to position the dropdown content */
@@ -46,8 +46,7 @@
     position: relative;
     display: inline-block;
     background-color: transparent;
-    /* float: right; */
-    
+    /* float: right;  */
 }
 
 /* Dropdown Content (Hidden by Default) */
@@ -70,7 +69,7 @@
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color:blue}
+.dropdown-content a:hover {background-color: transparent}
 
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
@@ -83,29 +82,21 @@
 }
 
 
-
-
-
-
-
-
 /* BEGIN Footer */
 
 .footer {
-    background-color:darkgrey;
+    background-color:lightblue;
     margin-bottom: 1px;
-    margin-top: 100px;
     width: 100%;
 }
 
-
-
 .footer2 {
-    background:	darkgray;
+    background:	lightblue;
     height: 50px;
     width: 1440;
     padding-bottom: 20px;
-    margin-bottom: 1px; 
+    margin-bottom: 1px;  
+    width: 100%;
   }
   
   #textFooter {
@@ -119,6 +110,10 @@
     color: #F8F8FF;
     font-family: 'Raleway', sans-serif;
     font-size: 14px;
+  }
+
+  .footer3 {
+    width: 100%;
   }
   
   .footer-elements {
@@ -158,69 +153,12 @@
 .tekstf3 {
     margin-top: 0px;
     padding-left: 40%;
-    background: darkgray;
+    background: lightblue;
     color: white;
     font-family: 'Raleway', sans-serif;
     font-size: 12px;
     font-weight: 300;
 }
-
   /*EINDE Footer  */
 
 
-
-  * {
-    box-sizing: border-box;
-}
-
-/* Style inputs */
-input[type=text], select, textarea {
-    width: 100%;
-    padding: 12px;
-    border: 1px solid #ccc;
-    margin-top: 6px;
-    margin-bottom: 16px;
-    resize: vertical;
-}
-
-input[type=submit] {
-    background-color: #4CAF50;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    cursor: pointer;
-}
-
-input[type=submit]:hover {
-    background-color: #45a049;
-}
-
-/* Style the container/contact section */
-.container {
-    border-radius: 5px;
-    background-color: #f2f2f2;
-    padding: 10px;
-}
-
-/* Create two columns that float next to eachother */
-.column {
-    float: left;
-    width: 50%;
-    margin-top: 6px;
-    padding: 20px;
-}
-
-/* Clear floats after the columns */
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
-@media (max-width: 600px) {
-    .column, input[type=submit] {
-        width: 100%;
-        margin-top: 0;
-    }
-}
