--- a/Ranya01/AssignmentG5.css
+++ b/Ranya01/AssignmentG5.css
@@ -1,3 +1,25 @@
+/* Implementing salma's background */
+
+body, html {
+  height: 100%;
+  margin: 0;
+}
+
+.Bgpicture {
+      /* The image used */
+      background-image: url("Opdracht02foto.jpg");
+
+      /* Full height */
+      height: 100%; 
+  
+      /* Center and scale the image nicely */
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      /* opacity: 0; */
+}
+
+
 /* testiing contact button met juiste positie */
 
 #bla {
