--- a/assets/css/1313.css
+++ b/assets/css/1313.css
@@ -1,11 +1,22 @@
+.container{
+  position: relative;
+}
+
 .plannerpanel {
   background-color : #eeeeee;
 }
 
 .greenButton {
-  background-color : rgba(124,252,0,0.3);
+  background-color : rgba(124,252,0,1);
 }
 
+#Advice_panel{
+  padding-left:20%;
+}
+
+#planner-options-panel{
+  margin-top:10%;
+}
 
 /* Class to hide additional accessibiltiy labels */
 .accessibility-helper {
@@ -23,7 +34,7 @@
   padding : 24px;
   margin-left: auto;
   margin-right: auto;
-  background-color:red;
+  background-color:yellow;
 }
 
 .planner-options {
@@ -46,9 +57,13 @@
 
   #planner-leg-list.affix {
     position: fixed;
-    width: 100%
+    width: 100%;
   }
 }
+
+#planner-leg-list{
+    background-color: white;
+  }
 
 @media (max-width: 768px) {
   .affix {
@@ -88,15 +103,21 @@ input[type=number]::-webkit-inner-spin-button {
 
 .planner-advice-container {
   margin-top: 8px;
+  padding-left:200px;
 }
 
 .planner-advice-dateheader{
   text-align: center;
+  background-color: grey;
+  color: white;
 }
 
 #planner-advice-list{
   display: table;
-  width: 100%;
+  width: 100%; 
+  height:100px;
+  overflow:hidden; 
+  overflow-y:scroll;
 }
 
 .leg-header{
