--- a/assets/css/test.css
+++ b/assets/css/test.css
@@ -1,64 +1,43 @@
 .body {
-    background-color: lightblue;
+    background-color:  rgb(1, 101, 153);;
 }
 
-.contact {
-    display: inline-block;
-    text-align: right;
-}
-
-
-/* Navbar */
-/* Dropdown Button */
 .dropbtn {
     background-color:transparent;
     color:white;
     padding: 16px;
     font-size: 16px;
-    border: none;
+    border: none;    
+    text-shadow: 2px 2px 4px #000000;
+    float: right;
+    margin-top: 1%;
+
+  }
+
+  .extraalingbttn {
+    margin-right: 1%;
+}
+
+.dropbtn:hover {
+    background-color: white;
 }
 
 
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
-    position: relative;
+.logorunning {
     display: inline-block;
-    background-color: transparent;
-    /* float: right; */
-    
+    z-index: 2;
+    border: solid;
+    border-color: rgb(1, 101, 153);
+    margin-left: 2%;
+    margin-top: 1%;
+    box-shadow: 2px 2px 4px #000000;
 }
 
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: transparent;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
+.Navbar01 {
+    position: relative;
+    height: 30%;
+
 }
-
-/* Links inside the dropdown */
-.dropdown-content a {
-    background-color:transparent;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color:transparent}
-
-/* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-/* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover .dropbtn {
-    background-color: transparent;
-}
-
 
 
 
@@ -78,12 +57,13 @@
 
  .tekstf3 {
     margin-top: 0px;
-    padding-left: 40%;
+    padding-left: 44%;
     background: darkgray;
     color: white;
     font-family: 'Raleway', sans-serif;
     font-size: 12px;
     font-weight: 300;
+    margin-bottom: 0;
 }
 
 /* css for contact form + google maps thingy */
@@ -102,7 +82,7 @@ input[type=text], select, textarea {
 }
 
 input[type=submit] {
-    background-color: lightblue;
+    background-color:  rgb(1, 101, 153);
     color: white;
     padding: 12px 20px;
     border: none;
