--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -1,102 +1,125 @@
 body{
-    background-color:grey;
+    margin:0;
 }
 
-/* 
-.backgroundpicture {
+.backgimg {
+
+      /* The image used */
+        background-image: url("codingimg.png");
+
+        /* Full height */
+        height: 900px; 
     
-    /* The image used */
-    background-image: url("codingimg.png");
-
-    /* Full height */
-    height: 100%; 
-
+        
     
-    /* Center and scale the image nicely */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+}
 
-} */
+.Navbar01 {
+    position: relative;
 
-/* Navbar */
-/* Dropdown Button */
+}
+
+
 .dropbtn {
     background-color:transparent;
-    color: red;
+    color:white;
     padding: 16px;
     font-size: 16px;
     border: none;    
+    text-shadow: 2px 2px 4px #000000;
+    float: right;
+    margin-top: 1%;
+
+  }
+
+.extraalingbttn {
+    margin-right: 1%;
+}
+
+.dropbtn:hover {
+    background-color: rgb(1, 101, 153);
+}
+
+.logorunning {
     display: inline-block;
+    z-index: 2;
+    margin-left: 2%;
+    margin-top: 1%;
 }
 
-.contact {
+.firsttext h1 {
+    color: white;
+    /* text-decoration: underline; */
+    font-size: 350%;
+    text-shadow: 2px 2px 4px #000000;
+    text-align: center;
+    margin: 0;
+}
+
+.firstcontainer {
+    margin: 1%;
+    margin-left: 18%;
+    width: 100%;
+    height: auto;
+}
+
+/* .card1 {
+width: 50px;
+height: 100px
+} */
+
+/* .card2 {
+    width: 50px;
+    height: 100px;
+} */
+
+.card1 {
+    /* Add shadows to create the "card" effect */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
     display: inline-block;
-} 
+    height: 25%;
+    width: 25%;
+    background-color: white;
+    margin-right: 6%;
+}
 
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
-    position: relative;
+.card2 {
+    /* Add shadows to create the "card" effect */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
     display: inline-block;
-    background-color: transparent;
-    /* float: right;  */
+    height: 25%;
+    width: 25%;
+    background-color: white;
+    margin-left: 6%;
+
 }
 
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: transparent;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
-/* Links inside the dropdown */
-.dropdown-content a {
-    color: teal;
-    background-color:transparent;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
+/* Add some padding inside the card container */
+.container1 {
+    padding: 2px 16px;
+    border: solid;
+    border-color: black;
+    background-color: rgb(1, 101, 153);
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: justify;
+    color: black;
 }
 
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: rgb(231, 231, 231);}
+.tekstf3 {
+    height:20px;
+    margin: 0;
+    padding-left: 40%;
+    background:  rgb(1, 101, 153);
+    color: white;
+    font-family: 'Raleway', sans-serif;
+    font-size: 12px;
+    font-weight: 300;
+  }
 
-/* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-/* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover .dropbtn {
-    background-color:transparent;
-}
-
-
-/* coloms */
-
-.sal {
-    display: inline-block;
-    width: 50%;
-    margin-right: 20%;
-    margin-left: 40%;
-}
-
-.fernando {
-    display: inline-block;
-    width: 50%;
-    height: 73%;
-    margin-top: 10%;
-    margin-left: 5%;
-}
-
-.ran {
-    margin-left: 50%;
-}
-
-.fern {
-    margin-left: 20%;
-    margin-top: 10%;
-}
